CREATE TABLE APP_USER
(
    id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username VARCHAR(255) NOT NULL,
    email    VARCHAR(255) NOT NULL
);

-- =========================================================
-- AUTH (AP基盤) schema - H2 (dev)
-- =========================================================

CREATE TABLE AUTH_ACCOUNT
(
    auth_account_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    user_id         VARCHAR(64)  NOT NULL,
    password_hash   VARCHAR(255) NOT NULL,

    enabled         BOOLEAN      NOT NULL DEFAULT TRUE,
    deleted         BOOLEAN      NOT NULL DEFAULT FALSE,

    created_at      TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by      VARCHAR(64)  NOT NULL,

    updated_at      TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_by      VARCHAR(64)  NOT NULL,

    deleted_at      TIMESTAMP NULL,
    deleted_by      VARCHAR(64) NULL
);

CREATE UNIQUE INDEX ux_auth_account_user_id
    ON AUTH_ACCOUNT (user_id);

CREATE INDEX ix_auth_account_deleted_enabled
    ON AUTH_ACCOUNT (deleted, enabled);


CREATE TABLE AUTH_ROLE
(
    role_code  VARCHAR(64) PRIMARY KEY,
    role_name  VARCHAR(128) NOT NULL,
    enabled    BOOLEAN      NOT NULL DEFAULT TRUE,

    created_at TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by VARCHAR(64)  NOT NULL,

    updated_at TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_by VARCHAR(64)  NOT NULL
);

CREATE INDEX ix_auth_role_enabled
    ON AUTH_ROLE (enabled);


CREATE TABLE AUTH_ACCOUNT_ROLE
(
    auth_account_id BIGINT      NOT NULL,
    role_code       VARCHAR(64) NOT NULL,

    created_at      TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by      VARCHAR(64) NOT NULL,

    PRIMARY KEY (auth_account_id, role_code),

    CONSTRAINT fk_auth_account_role_account
        FOREIGN KEY (auth_account_id) REFERENCES AUTH_ACCOUNT (auth_account_id),

    CONSTRAINT fk_auth_account_role_role
        FOREIGN KEY (role_code) REFERENCES AUTH_ROLE (role_code)
);

CREATE INDEX ix_auth_account_role_role_code
    ON AUTH_ACCOUNT_ROLE (role_code);


CREATE TABLE AUTH_PASSWORD_HISTORY
(
    auth_password_history_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    auth_account_id          BIGINT       NOT NULL,

    password_hash            VARCHAR(255) NOT NULL,
    change_type              VARCHAR(32)  NOT NULL,

    changed_at               TIMESTAMP    NOT NULL,
    operated_by              VARCHAR(64) NULL,

    created_at               TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by               VARCHAR(64)  NOT NULL,

    CONSTRAINT fk_auth_pw_hist_account
        FOREIGN KEY (auth_account_id) REFERENCES AUTH_ACCOUNT (auth_account_id)

);

CREATE INDEX ix_auth_pw_hist_account_changed_desc
    ON AUTH_PASSWORD_HISTORY (auth_account_id, changed_at DESC, auth_password_history_id DESC);


CREATE TABLE AUTH_LOGIN_HISTORY
(
    auth_login_history_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    auth_account_id       BIGINT      NOT NULL,

    result                VARCHAR(16) NOT NULL,
    login_at              TIMESTAMP   NOT NULL,

    created_at            TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by            VARCHAR(64) NOT NULL,

    CONSTRAINT fk_auth_login_hist_account
        FOREIGN KEY (auth_account_id) REFERENCES AUTH_ACCOUNT (auth_account_id)

);

CREATE INDEX ix_auth_login_hist_account_at_desc
    ON AUTH_LOGIN_HISTORY (auth_account_id, login_at DESC, auth_login_history_id DESC);

CREATE INDEX ix_auth_login_hist_account_result_at_desc
    ON AUTH_LOGIN_HISTORY (auth_account_id, result, login_at DESC);


CREATE TABLE AUTH_ACCOUNT_LOCK_HISTORY
(
    auth_account_lock_history_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    auth_account_id              BIGINT      NOT NULL,

    locked                       BOOLEAN     NOT NULL,
    reason                       VARCHAR(64) NOT NULL DEFAULT 'UNSPECIFIED',
    occurred_at                  TIMESTAMP   NOT NULL,

    operated_by                  VARCHAR(64) NULL,

    created_at                   TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by                   VARCHAR(64) NOT NULL,

    CONSTRAINT fk_auth_lock_hist_account
        FOREIGN KEY (auth_account_id) REFERENCES AUTH_ACCOUNT (auth_account_id)
);

CREATE INDEX ix_auth_lock_hist_account_occurred_desc
    ON AUTH_ACCOUNT_LOCK_HISTORY (auth_account_id, occurred_at DESC, auth_account_lock_history_id DESC);

CREATE INDEX ix_auth_lock_hist_account_locked_occurred_desc
    ON AUTH_ACCOUNT_LOCK_HISTORY (auth_account_id, locked, occurred_at DESC);


CREATE TABLE AUTH_ACCOUNT_EXPIRY_HISTORY
(
    auth_account_expiry_history_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    auth_account_id                BIGINT      NOT NULL,

    event_type                     VARCHAR(16) NOT NULL,
    reason                         VARCHAR(64) NOT NULL DEFAULT 'UNSPECIFIED',

    occurred_at                    TIMESTAMP   NOT NULL,
    operated_by                    VARCHAR(64),

    created_at                     TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by                     VARCHAR(64) NOT NULL,

    CONSTRAINT fk_auth_expiry_hist_account
        FOREIGN KEY (auth_account_id) REFERENCES AUTH_ACCOUNT (auth_account_id)
);

CREATE INDEX ix_auth_expiry_hist_account_occurred_desc
    ON AUTH_ACCOUNT_EXPIRY_HISTORY (auth_account_id, occurred_at DESC, auth_account_expiry_history_id DESC);

CREATE INDEX ix_auth_expiry_hist_account_event_occurred_desc
    ON AUTH_ACCOUNT_EXPIRY_HISTORY (auth_account_id, event_type, occurred_at DESC);
